fixed the scrollbars

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -358,17 +358,25 @@ animation: ellipse-2 10s linear 0s infinite alternate;
   box-shadow: 0px 4px 8px white inset, 0px 8px 8px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
   padding: 10px 20px 10px 20px;
-  height: 300px; /* or any desired height */
+  height: 300px; 
+  width: 100%;
+  max-width: 1220px; 
+  margin: auto; 
 }
+
 .compiler-log {
   background-color: #fff;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 10px 10px 10px;
   padding: 10px;
   font-family: monospace;
-  white-space: pre-wrap;
+  white-space: pre-wrap; 
+  word-wrap: break-word; 
   color: #333;
   height: calc(100% - 40px);
   overflow-y: auto;
+  width: 100%; 
+  max-width: 100%;
+  box-sizing: border-box; 
 }
 
 .compiler-log-tab {
